# forest-5.0

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo.csv  environment.yml  equity.csvd  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: live.example.yaml
docs/: 15_logging_schema.json  equity.csv
mt4/: ForestBridge.mq4
scripts/: ablation_scenarios.py  batch_normalize_dir.py  debug_h1_decision.py  dx_fx_probe.py  dx_fx_probe.pyforest_guard.py  dx_mtm_guard.py  h1_mini_grid.py  mt4_deploy.sh  mt4_smoke_test.py  mtm_trace.py  normalize_fxdata.py  optimize_grid.py  time_train.py  walkforward.py
src/forest5/: __init__.py  ai_agent.py  cli.py  config.py  config_live.py  decision.py  decision_core.py  numerology.py  time_only.py
src/forest5/backtest/: engine.py  errors.py  grid.py  risk.py  trace.py  tradebook.py  walkforward.py
src/forest5/config/: __init__.py  loader.py  strategy.py
src/forest5/core/: indicators.py
src/forest5/examples/: synthetic.py
src/forest5/grid/: __init__.py  engine.py
src/forest5/live/: live_runner.py  mt4_broker.py  risk_guard.py  router.py  settings.py  setups.py
src/forest5/signals/: __init__.py  candles.py  combine.py  compat.py  contract.py  ema.py  factory.py  fusion.py  h1_ema_rsi_atr.py  macd.py  setups.py  (+1 more)
tests/: test_ai_agent.py  test_backtest_time_blocking.py  test_backtest_time_fusion.py  test_backtest_timeonly_ab.py  test_bootstrap_position.py  test_candles.py  test_candles_confirmation.py  test_cli.py  test_cli_aliases.py  test_cli_backtest_disable_patterns.py  test_cli_backtest_export_setups.py  test_cli_backtest_metrics.py  test_cli_backtest_strategy_h1.py  test_cli_csv.py  test_cli_data.py  test_cli_data_input_dir.py  test_cli_data_single_file.py  test_cli_grid_dry_run.py  test_cli_grid_from_to.py  test_cli_grid_options.py  test_cli_grid_ranges.py  test_cli_grid_timeonly_smoke.py  test_cli_h1_policy.py  test_cli_help_sanity.py  test_cli_time_options.py  test_cli_validate_live.py  test_cli_version.py  test_cli_walkforward.py  test_cli_walkforward_out.py  test_config.py  test_config_live.py  test_config_loader_paths.py  test_config_paths.py  test_config_windows_path.py  test_contract_confidence.py  test_contract_sl_tp_preservation.py  test_contract_to_int.py  test_csv_dialect_sniff.py  test_csv_infer_schema.py  test_csv_time_ingest.py  (+97 more)
(+17 files in other folders)
